--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"db:start": "docker compose up",
 		"db:push": "drizzle-kit push",
 		"db:migrate": "drizzle-kit migrate",
-		"db:studio": "drizzle-kit studio"
+		"db:studio": "drizzle-kit studio",
+		"start": "concurrently --kill-others \"vite dev\" \"docker compose up\""
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
@@ -40,7 +41,9 @@
 		"@node-rs/argon2": "^2.0.2",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
+		"concurrently": "^9.1.2",
 		"drizzle-orm": "^0.40.0",
-		"postgres": "^3.4.5"
+		"postgres": "^3.4.5",
+		"uuid": "^11.1.0"
 	}
 }
