--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
 		"globals": "^16.0.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"sass-embedded": "^1.86.0",
+		"sass-embedded": "^1.86.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwindcss": "^4.0.17",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0"
@@ -43,6 +44,7 @@
 		"@node-rs/argon2": "^2.0.2",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
+		"@tailwindcss/vite": "^4.0.17",
 		"concurrently": "^9.1.2",
 		"drizzle-orm": "^0.40.1",
 		"postgres": "^3.4.5",
