--- a/package.json
+++ b/package.json
@@ -19,26 +19,26 @@
 		"start": "concurrently --kill-others \"vite dev\" \"docker compose up\""
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.2.5",
-		"@eslint/js": "^9.18.0",
-		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@types/node": "^22.13.14",
-		"drizzle-kit": "^0.30.2",
-		"eslint": "^9.18.0",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^3.0.0",
+		"@eslint/compat": "^1.2.7",
+		"@eslint/js": "^9.23.0",
+		"@sveltejs/adapter-auto": "^5.0.0",
+		"@sveltejs/kit": "^2.20.2",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@types/node": "^22.13.16",
+		"drizzle-kit": "^0.30.6",
+		"eslint": "^9.23.0",
+		"eslint-config-prettier": "^10.1.1",
+		"eslint-plugin-svelte": "^3.5.0",
 		"globals": "^16.0.0",
-		"prettier": "^3.4.2",
+		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.3.3",
 		"sass-embedded": "^1.86.1",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
+		"svelte": "^5.25.6",
+		"svelte-check": "^4.1.5",
 		"tailwindcss": "^4.0.17",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.20.0",
-		"vite": "^6.0.0"
+		"typescript": "^5.8.2",
+		"typescript-eslint": "^8.29.0",
+		"vite": "^6.2.4"
 	},
 	"dependencies": {
 		"@node-rs/argon2": "^2.0.2",
@@ -46,7 +46,8 @@
 		"@oslojs/encoding": "^1.1.0",
 		"@tailwindcss/vite": "^4.0.17",
 		"concurrently": "^9.1.2",
-		"drizzle-orm": "^0.40.1",
+		"drizzle-orm": "^0.41.0",
+		"npm": "^11.2.0",
 		"postgres": "^3.4.5",
 		"uuid": "^11.1.0"
 	}
